# mold

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  ISSUES.md  LICENSE  README.md  REVIEW.md  config.example.toml  flake.nix  install.sh
.cargo/: config.toml
contrib/: README.md  mold-server.env.example  mold-server.service  mold-server.user.service
crates/mold-catalog/: Cargo.toml  build.rs
crates/mold-catalog/data/catalog/: flux.json  flux2.json  ltx-video.json  ltx2.json  qwen-image.json  sd15.json  sdxl.json  wuerstchen.json  z-image.json
crates/mold-catalog/src/: civitai_map.rs  companions.rs  entry.rs  families.rs  filter.rs  hf_seeds.rs  lib.rs  normalizer.rs  scanner.rs  shards.rs  sink.rs
crates/mold-catalog/src/stages/: civitai.rs  hf.rs  mod.rs  throttle.rs
crates/mold-catalog/tests/: civitai_map_completeness.rs  civitai_stage.rs  companions_lookup.rs  db_seed.rs  embed.rs  entry_serde.rs  families_roundtrip.rs  filter.rs  hf_stage.rs  no_inheritance.rs  normalizer_snapshots.rs  scanner_orchestrator.rs  sink_db.rs  sink_roundtrip.rs  sink_write.rs
crates/mold-catalog/tests/fixtures/: civitai_juggernaut.json  hf_flux_dev.json  hf_flux_dev_tree.json
crates/mold-cli/: Cargo.toml
crates/mold-cli/src/: control.rs  errors.rs  main.rs  metadata_db.rs  output.rs  procinfo.rs  test_support.rs  theme.rs  tui.rs  ui.rs
crates/mold-cli/src/commands/: catalog.rs  chain.rs  chain_validate.rs  clean.rs  cleanup.rs  config.rs  default.rs  discord.rs  expand.rs  generate.rs  info.rs  list.rs  mod.rs  ps.rs  pull.rs  rm.rs  run.rs  runpod.rs  serve.rs  server.rs  stats.rs  unload.rs  update.rs  upscale.rs
crates/mold-cli/tests/: catalog_cli.rs  chain_validate_corpus.rs  cli_integration.rs  runpod_integration.rs
crates/mold-cli/tests/adversarial/: frames_not_8k_plus_1.toml  newline_prompt.toml  reserved_loras.toml  seventeen_stages.toml  v99_schema.toml
crates/mold-cli/tests/common/: mod.rs
crates/mold-core/: Cargo.toml  build.rs
crates/mold-core/src/: build_info.rs  catalog.rs  chain.rs  chain_toml.rs  client.rs  config.rs  config_test.rs  control.rs  download.rs  error.rs  expand.rs  expand_prompts.rs  lib.rs  manifest.rs  placement_test.rs  runpod.rs  test_support.rs  types.rs  validation.rs
crates/mold-core/tests/: chain_client.rs  chain_toml.rs  runpod_client.rs
crates/mold-db/: Cargo.toml
crates/mold-db/src/: catalog.rs  config_sync.rs  db.rs  lib.rs  metadata_io.rs  migrations.rs  model_prefs.rs  path.rs  prompt_history.rs  reconcile.rs  record.rs  settings.rs
crates/mold-db/tests/: catalog_repo.rs
crates/mold-discord/: Cargo.toml
crates/mold-discord/src/: access.rs  checks.rs  cooldown.rs  format.rs  handler.rs  lib.rs  main.rs  quota.rs  state.rs
crates/mold-discord/src/commands/: admin.rs  expand.rs  generate.rs  mod.rs  models.rs  quota.rs  status.rs
crates/mold-inference/: Cargo.toml
crates/mold-inference/src/: cache.rs  device.rs  engine.rs  engine_base.rs  error.rs  expand.rs  factory.rs  image.rs  img2img.rs  img_utils.rs  lib.rs  model_registry.rs  progress.rs  scheduler.rs  shared_pool.rs  weight_loader.rs
crates/mold-inference/src/controlnet/: mod.rs  model.rs
crates/mold-inference/src/encoders/: clip.rs  mod.rs  qwen2_text.rs  qwen2_text_gguf.rs  qwen2_vision.rs  qwen3.rs  qwen3_bf16.rs  qwen3_gguf.rs  sd3_clip.rs  t5.rs  t5_gguf.rs  variant_resolution.rs
crates/mold-inference/src/flux/: lora.rs  mod.rs  offload.rs  pipeline.rs  scheduler.rs  tokenizer.rs  transformer.rs
crates/mold-inference/src/flux2/: mod.rs  pipeline.rs  quantized_transformer.rs  sampling.rs  transformer.rs  vae.rs
crates/mold-inference/src/loader/: mod.rs  sd15_keys.rs  sdxl_keys.rs  single_file.rs  single_file_backend.rs  vae_keys.rs
crates/mold-inference/src/ltx2/: assets.rs  backend.rs  chain.rs  conditioning.rs  execution.rs  lora.rs  media.rs  mod.rs  pipeline.rs  plan.rs  preset.rs  runtime.rs  stitch.rs
crates/mold-inference/src/ltx2/guidance/: mod.rs  perturbations.rs
crates/mold-inference/src/ltx2/model/: audio_vae.rs  mod.rs  patchifiers.rs  rope.rs  shapes.rs  transformer.rs  upsampler.rs  video_transformer.rs  video_vae.rs  vocoder.rs
crates/mold-inference/src/ltx2/sampler/: mod.rs
crates/mold-inference/src/ltx2/text/: connectors.rs  encoder.rs  gemma.rs  mod.rs  prompt_encoder.rs
crates/mold-inference/src/ltx_video/: latent_upsampler.rs  mod.rs  pipeline.rs  video_enc.rs
crates/mold-inference/src/qwen_image/: mod.rs  offload.rs  pipeline.rs  quantized_transformer.rs  sampling.rs  transformer.rs  vae.rs
crates/mold-inference/src/sd15/: mod.rs  pipeline.rs
crates/mold-inference/src/sd3/: mod.rs  pipeline.rs  quantized_mmdit.rs  sampling.rs  transformer.rs  vae.rs
crates/mold-inference/src/sdxl/: mod.rs  pipeline.rs
crates/mold-inference/src/upscaler/: arch.rs  engine.rs  mod.rs  rrdbnet.rs  srvggnet.rs  tiling.rs
crates/mold-inference/src/wuerstchen/: mod.rs  pipeline.rs
crates/mold-inference/src/zimage/: gguf_dense.rs  mod.rs  pipeline.rs  quantized_transformer.rs  transformer.rs
crates/mold-inference/tests/: device_resolve_test.rs
crates/mold-server/: Cargo.toml  build.rs
crates/mold-server/src/: auth.rs  catalog_api.rs  catalog_api_test.rs  chain_limits.rs  downloads.rs  downloads_test.rs  gpu_pool.rs  gpu_worker.rs  lib.rs  logging.rs  main.rs  metrics.rs  metrics_test.rs  model_cache.rs  model_manager.rs  queue.rs  rate_limit.rs  request_id.rs  resources.rs  resources_test.rs  routes.rs  routes_chain.rs  routes_test.rs  state.rs  test_support.rs  web_ui.rs
crates/mold-server/tests/: catalog_routes.rs
crates/mold-tui/: Cargo.toml
crates/mold-tui/src/: action.rs  animation.rs  app.rs  backend.rs  event.rs  gallery_scan.rs  history.rs  lib.rs  model_info.rs  session.rs  test_env.rs  thumbnails.rs
crates/mold-tui/src/ui/: gallery.rs  generate.rs  info.rs  mod.rs  models.rs  param_form.rs  popup.rs  progress.rs  queue.rs  recent.rs  script_composer.rs  settings.rs  theme.rs  widgets.rs
docker/: start.sh
nix/: module.nix
web/: .gitignore  (+8 more)
(+173 files in other folders)
