[workspace]
members = [
    "crates/mold-core",
    "crates/mold-inference",
    "crates/mold-server",
    "crates/mold-cli",
    "crates/mold-discord",
    "crates/mold-tui",
]
resolver = "2"

[workspace.package]
version = "0.5.3"
edition = "2021"
license = "MIT"
authors = ["James Brink <brink.james@gmail.com>"]
description = "Local AI image generation CLI — FLUX, SD3.5, SD 1.5, SDXL, Z-Image, Flux.2, Qwen-Image, & Wuerstchen diffusion models on your GPU"
rust-version = "1.85"
homepage = "https://github.com/utensils/mold"
repository = "https://github.com/utensils/mold"
readme = "README.md"
keywords = ["ai", "image-generation", "diffusion", "flux", "gpu"]
categories = ["command-line-utilities", "multimedia::images", "science"]

[workspace.metadata.crane]
name = "mold"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

# Local candle fork — native FP8 matmul via cuBLASLt + F8E4M3 CUDA cast fix.
# Comment out [patch] section and bump versions once published to crates.io.
[patch.crates-io]
candle-core-mold = { path = "../candle/candle-core" }
candle-nn-mold = { path = "../candle/candle-nn" }
candle-transformers-mold = { path = "../candle/candle-transformers" }


