[workspace]
members = [
    "crates/mold-core",
    "crates/mold-db",
    "crates/mold-inference",
    "crates/mold-server",
    "crates/mold-cli",
    "crates/mold-discord",
    "crates/mold-tui",
    "crates/mold-catalog",
]
resolver = "2"

[workspace.package]
version = "0.9.0"
edition = "2021"
license = "MIT"
authors = ["James Brink <brink.james@gmail.com>"]
description = "Local AI image generation CLI — FLUX, SD3.5, SD 1.5, SDXL, Z-Image, Flux.2, Qwen-Image, Wuerstchen, LTX Video, & LTX-2 diffusion models on your GPU"
rust-version = "1.85"
homepage = "https://github.com/utensils/mold"
repository = "https://github.com/utensils/mold"
readme = "README.md"
keywords = ["ai", "image-generation", "diffusion", "flux", "gpu"]
categories = ["command-line-utilities", "multimedia::images", "science"]

[workspace.metadata.crane]
name = "mold"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[profile.dev-fast]
inherits = "release"
lto = "thin"
codegen-units = 16
incremental = true
debug = 1
strip = false
