[package]
name = "mold-ai-catalog"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Model-discovery catalog for mold — Hugging Face + Civitai scanner, embedded shards, FTS5-backed lookup."

[lib]
name = "mold_catalog"

[dependencies]
mold-core = { path = "../mold-core", package = "mold-ai-core", version = "0.9.0" }
mold-db = { path = "../mold-db", package = "mold-ai-db", version = "0.9.0" }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rust-embed = "8"
tracing = "0.1"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
wiremock = "0.6"
