[package]
name = "mold-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for mold — AI image generation"

[[bin]]
name = "mold"
path = "src/main.rs"

[features]
default = []
cuda = ["mold-server/cuda", "mold-inference/cuda"]
metal = ["mold-server/metal", "mold-inference/metal"]

[dependencies]
mold-core = { path = "../mold-core" }
mold-inference = { path = "../mold-inference" }
mold-server = { path = "../mold-server" }
anyhow = "1"
clap = { version = "4", features = ["derive", "unstable-ext"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
colored = "3"
libc = "0.2"
dirs = "6"
indicatif = "0.17"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
