[package]
name = "mold-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Local AI image generation CLI — FLUX, SDXL, SD3.5, Z-Image diffusion models on your GPU"

[[bin]]
name = "mold"
path = "src/main.rs"

[features]
default = []
cuda = ["mold-server/cuda", "mold-inference/cuda"]
metal = ["mold-server/metal", "mold-inference/metal"]
preview = ["viuer"]
discord = ["mold-discord"]
expand = ["mold-inference/expand", "mold-server/expand"]

[dependencies]
mold-core = { path = "../mold-core", package = "mold-ai-core", version = "0.2.0" }
mold-inference = { path = "../mold-inference", package = "mold-ai-inference", version = "0.2.0" }
mold-server = { path = "../mold-server", package = "mold-ai-server", version = "0.2.0" }
anyhow = "1"
clap = { version = "4", features = ["derive", "env", "unstable-ext"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
colored = "3"
ctrlc = "3"
image = "0.25"
libc = "0.2"
dirs = "6"
indicatif = "0.17"
rand = "0.8"
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
viuer = { version = "0.11", optional = true }
mold-discord = { path = "../mold-discord", package = "mold-ai-discord", version = "0.2.0", optional = true }

[dev-dependencies]
filetime = "0.2"
