[package]
name = "mold-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types, API protocol, and HTTP client for mold"

[dependencies]
anyhow = "1"
console = "0.15"
dirs = "6"
hf-hub = { version = "0.5", default-features = false, features = ["tokio", "ureq", "rustls-tls"] }
indicatif = "0.17"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
utoipa = { version = "5", features = ["preserve_order"] }
uuid = { version = "1", features = ["v4", "serde"] }
