[package]
name = "mold-ai-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Shared types, API protocol, and HTTP client for mold"

[lib]
name = "mold_core"

[dependencies]
anyhow = "1"
console = "0.15"
dirs = "6"
hf-hub = { version = "0.5", default-features = false, features = ["tokio", "ureq", "rustls-tls"] }
indicatif = "0.17"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
base64 = "0.22"
strsim = "0.11"
utoipa = { version = "5", features = ["preserve_order"] }
ureq = { version = "3", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
