[package]
name = "mold-ai-db"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "SQLite-backed metadata store for mold gallery items"

[lib]
name = "mold_db"

[dependencies]
mold-ai-core = { path = "../mold-core" }
anyhow = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
walkdir = "2"
png = "0.17"

[dev-dependencies]
tempfile = "3"
toml = "0.8"
