[package]
name = "mold-ai-discord"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Discord bot for mold — AI image generation via slash commands"

[lib]
name = "mold_discord"

[[bin]]
name = "mold-discord"
path = "src/main.rs"

[dependencies]
mold-core = { path = "../mold-core", package = "mold-ai-core", version = "0.7.0" }
poise = "0.6"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
