[package]
name = "mold-ai-inference"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Candle-based inference engine for mold — FLUX, SDXL, SD3.5, Z-Image diffusion models"

[lib]
name = "mold_inference"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
expand = []

[dependencies]
mold-core = { path = "../mold-core", package = "mold-ai-core", version = "0.3.0" }
anyhow = "1"
candle-core = { package = "candle-core-mold", git = "https://github.com/utensils/candle", rev = "96a6156a" }
candle-nn = { package = "candle-nn-mold", git = "https://github.com/utensils/candle", rev = "96a6156a" }
candle-transformers = { package = "candle-transformers-mold", git = "https://github.com/utensils/candle", rev = "96a6156a" }
image = "0.25"
png = "0.18"
rand = "0.8"
rand_distr = "0.4"
safetensors = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.21"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
