[package]
name = "mold-ai-inference"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Candle-based inference engine for mold — FLUX, SDXL, SD3.5, Z-Image diffusion models"
autobins = false

[lib]
name = "mold_inference"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
expand = []
webp = ["webp-animation"]
mp4 = ["dep:fdk-aac"]
dev-bins = []

[[bin]]
name = "ltx2_checkpoint_probe"
path = "src/bin/ltx2_checkpoint_probe.rs"
required-features = ["dev-bins"]

[[bin]]
name = "ltx2_review"
path = "src/bin/ltx2_review.rs"
required-features = ["dev-bins"]

[[bin]]
name = "ltx2_vae_probe"
path = "src/bin/ltx2_vae_probe.rs"
required-features = ["dev-bins", "mp4"]

[dependencies]
mold-core = { path = "../mold-core", package = "mold-ai-core", version = "0.8.1" }
anyhow = "1"
candle-core = { package = "candle-core-mold", version = "0.9.10" }
candle-nn = { package = "candle-nn-mold", version = "0.9.10" }
candle-transformers = { package = "candle-transformers-mold", version = "0.9.10" }
gif = "0.13"
webp-animation = { version = "0.10", features = ["static"], optional = true }
image = "0.25"
mp4-rs = { package = "mp4", version = "0.14" }
openh264 = { version = "0.9", features = ["source"] }
png = "0.18"
rand = "0.8"
rand_distr = "0.4"
rustfft = "6"
safetensors = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5", default-features = false, features = ["aac", "flac", "isomp4", "mp3", "ogg", "pcm", "vorbis", "wav"] }
tempfile = "3"
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
fdk-aac = { version = "0.8", optional = true }
