[package]
name = "mold-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP inference server for mold"

[[bin]]
name = "mold-server"
path = "src/main.rs"

[features]
default = []
cuda = ["mold-inference/cuda"]
metal = ["mold-inference/metal"]

[dependencies]
mold-core = { path = "../mold-core" }
mold-inference = { path = "../mold-inference" }
anyhow = "1"
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
futures-core = "0.3"
tokio-stream = "0.1"
utoipa = { version = "5", features = ["preserve_order"] }
