[package]
name = "mold-ai-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "HTTP inference server for mold"
# build.rs stages the web SPA bundle into a directory that `rust-embed` picks
# up at compile time, so the final `mold` binary serves the gallery UI with no
# filesystem dependency. See `MOLD_WEB_DIST` / `MOLD_EMBED_WEB_DIR` in build.rs.
build = "build.rs"

[lib]
name = "mold_server"

[[bin]]
name = "mold-server"
path = "src/main.rs"

[features]
default = []
cuda = ["mold-inference/cuda"]
metal = ["mold-inference/metal"]
expand = ["mold-inference/expand"]
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus"]


[dependencies]
mold-core = { path = "../mold-core", package = "mold-ai-core", version = "0.8.1" }
mold-db = { path = "../mold-db", package = "mold-ai-db", version = "0.8.1" }
mold-inference = { path = "../mold-inference", package = "mold-ai-inference", version = "0.8.1" }
anyhow = "1"
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-appender = "0.2"
base64 = "0.22"
futures-core = "0.3"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io", "rt"] }
async-trait = "0.1"
thiserror = "1"
dirs = "5"
futures = "0.3"
utoipa = { version = "5", features = ["preserve_order"] }
sha2 = "0.10"
walkdir = "2"
png = "0.18"
image = "0.25"
governor = { version = "0.8", features = ["std"] }
uuid = { version = "1", features = ["v4"] }
subtle = "2"
hostname = "0.4"
metrics = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.16", optional = true, default-features = false }
rust-embed = { version = "8", features = ["mime-guess", "interpolate-folder-path"] }
mime_guess = "2"

[dev-dependencies]
tempfile = "3"
