[package]
name = "mold-ai-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Terminal UI for mold — interactive AI image generation"

[features]
default = []
cuda = ["mold-inference/cuda"]
metal = ["mold-inference/metal"]
expand = ["mold-inference/expand"]

[dependencies]
mold-core = { path = "../mold-core", package = "mold-ai-core", version = "0.9.0" }
mold-db = { path = "../mold-db", package = "mold-ai-db", version = "0.9.0" }
mold-inference = { path = "../mold-inference", package = "mold-ai-inference", version = "0.9.0" }
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
ratatui-image = "4"
tui-textarea = "0.7"
image = "0.25"
png = "0.18"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
rand = "0.8"
sysinfo = "0.34"
dirs = "6"
walkdir = "2"
unicode-width = "0.2"
open = "5"
ureq = "3"

[dev-dependencies]
serial_test = "3"
